--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -11,7 +11,7 @@
         android:id="@+id/button2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="NDTV" />
+        android:text="BBC" />
 
     <WebView
         android:id="@+id/webviewNDTV"
