--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/teal_200"
-        android:text="Aaj Tak" />
+        android:text="NDTV" />
 
     <WebView
         android:id="@+id/webViewAaj"
