--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,22 +9,38 @@
         android:id="@+id/nav_home"
         android:name="com.example.worldnews.ui.aaj.AajFragment"
         android:label="Aaj Tak"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_nav_home_to_nav_gallery"
+            app:destination="@id/nav_gallery" />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_gallery"
         android:name="com.example.worldnews.ui.ndtv.NdtvFragment"
         android:label="NDTV"
-        tools:layout="@layout/fragment_gallery" />
+        tools:layout="@layout/fragment_gallery" >
+        <action
+            android:id="@+id/action_nav_gallery_to_bbc"
+            app:destination="@id/bbc" />
+    </fragment>
 
     <fragment
         android:id="@+id/bbc"
         android:name="com.example.worldnews.ui.bbc.BbcFragment"
         android:label="BBC NEWS"
-        tools:layout="@layout/fragment_slideshow" />
+        tools:layout="@layout/fragment_slideshow" >
+        <action
+            android:id="@+id/action_bbc_to_zee"
+            app:destination="@id/zee" />
+    </fragment>
     <fragment
         android:id="@+id/zee"
         android:name="com.example.worldnews.Fragments.Zee_Newa"
         android:label="Zee NEWS"
-        tools:layout="@layout/fragment_zee__newa" />
+        tools:layout="@layout/fragment_zee__newa" >
+        <action
+            android:id="@+id/action_zee_to_nav_home"
+            app:destination="@id/nav_home" />
+    </fragment>
 </navigation>
